Lista de 15 exercícios com python

--- a/Lista_de_exercícios_CNSEG_py.ipynb
+++ b/Lista_de_exercícios_CNSEG_py.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNojmd12hgpnhg/XDk1UoW",
+      "authorship_tag": "ABX9TyOstHAGRGs8Qd4J8xF92Qzl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -413,8 +413,7 @@
         "\n",
         "menor, maior = encontrar_menor_maior(numeros)\n",
         "print(f'{menor, maior}')\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "fiIPl43ZMhw9"
@@ -636,7 +635,7 @@
         "id": "Tw3TVCWuIp8u",
         "outputId": "d796f0fb-eea3-4bee-e7eb-f8d729e0079c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,6 +645,162 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EXERCICIO 13 - LISTA\n",
+        "O que é para fazer:\n",
+        "\n",
+        "Crie uma lista com 5 números inteiros de sua escolha e calcule a soma desses valores. Imprima o resultado da soma na tela.\n",
+        "\n",
+        "Como Fazer:\n",
+        "\n",
+        "Crie uma lista com 5 números inteiros de sua escolha;\n",
+        "Declare uma variável para armazenar a soma dos valores da lista;\n",
+        "Utilize um laço de repetição para percorrer todos os elementos da lista e ir somando seus valores na variável criada no passo anterior;\n",
+        "Imprima o resultado da soma na tela."
+      ],
+      "metadata": {
+        "id": "Mvd4YyaqpuPR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [10, 15, 20 , 30, 40]\n",
+        "soma = 0\n",
+        "for numero in numeros:\n",
+        "    soma = soma + numero\n",
+        "print (soma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XxNsiZDtptrm",
+        "outputId": "3cd5395a-ebf5-48b7-d219-a4f47fde3740"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "115\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EXERCÍCIO 14\n",
+        "\n",
+        "O que é para fazer:\n",
+        "\n",
+        "Crie uma tupla com 5 elementos e realize as seguintes operações: <ul><li>1-Imprima na tela o tamanho da tupla;</li><li>2-Crie uma nova tupla que contenha os elementos da tupla original em ordem reversa;</li><li>3-Imprima na tela os elementos da nova tupla separados por \"\"-\"\".</li></ul>\n",
+        "\n",
+        "Como Fazer:\n",
+        "\n",
+        "Crie uma tupla com 5 elementos de sua escolha;\n",
+        "Utilize a função len() para imprimir na tela o tamanho da tupla;\n",
+        "Crie uma nova tupla que contenha os elementos da tupla original em ordem reversa, utilizando o fatiamento com parâmetro -1;\n",
+        "Utilize o método join() para imprimir na tela os elementos da nova tupla, separados por \"\"-\"\"."
+      ],
+      "metadata": {
+        "id": "UyoSZupPrPtP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "elementos = (10, 15, 20, 30, 40)\n",
+        "print(elementos)\n",
+        "print(len(elementos))\n",
+        "nova_tupla = elementos[::-1]\n",
+        "\n",
+        "print(\"Elementos da nova tupla separados por '-':\", \"-\".join(map(str, nova_tupla)))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bLvbVLbKrSZt",
+        "outputId": "4e16ac82-fd4b-47d5-c758-99ed9382ef46"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(10, 15, 20, 30, 40)\n",
+            "5\n",
+            "Elementos da nova tupla separados por '-': 40-30-20-15-10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EXERCÍCIO 15\n",
+        "\n",
+        "O que é para fazer:\n",
+        "\n",
+        "Crie uma lista com 6 elementos e utilize o fatiamento para imprimir na tela as seguintes sub-listas: os três primeiros elementos, os três últimos elementos e uma sub-lista com o segundo e o terceiro elemento.\n",
+        "\n",
+        "Como Fazer:\n",
+        "\n",
+        "Crie uma lista com 6 elementos de sua escolha.\n",
+        "Utilize o fatiamento para imprimir na tela os três primeiros elementos da lista.\n",
+        "Utilize o fatiamento para imprimir na tela os três últimos elementos da lista.\n",
+        "Utilize o fatiamento para imprimir na tela uma sub-lista com o segundo e o terceiro elementos da lista."
+      ],
+      "metadata": {
+        "id": "jMYxkKmDyN1u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = [10, 20, 30 , 40, 50, 60]\n",
+        "\n",
+        "print(lista[:3])\n",
+        "print(lista[:-3])\n",
+        "\n",
+        "sub_lista=[lista[1:3]]\n",
+        "\n",
+        "print(sub_lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AT6iIAp0yNUq",
+        "outputId": "27d35550-9ca4-4428-9176-d51ceb818fd6"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30]\n",
+            "[10, 20, 30]\n",
+            "[[20, 30]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "vOTYXobY1ZuE"
+      }
     }
   ]
 }
